DE7686 - fixes ie11 misalignment

--- a/app/shared/components/list-table-drawer/list-table-drawer.component.scss
+++ b/app/shared/components/list-table-drawer/list-table-drawer.component.scss
@@ -140,3 +140,17 @@
     }
   }
 }
+
+:host-context(.ie) {
+
+  .list-table-drawer-row {
+
+    .checkbox-column {
+      width: 4.9%!important;
+    }
+
+    .current-column {
+      width: 7.5%!important;
+    }
+  }
+}
